[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/reference/title.png" type="Texture" id=1]
[ext_resource path="res://assets/reference/stars.jpg" type="Texture" id=2]
[ext_resource path="res://assets/reference/new_game.png" type="Texture" id=3]
[ext_resource path="res://assets/reference/continue_pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/reference/new_game_pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/reference/continue.png" type="Texture" id=6]
[ext_resource path="res://assets/reference/floater.png" type="Texture" id=7]
[ext_resource path="res://scenes/mainmenu/mainmenu.gd" type="Script" id=8]
[ext_resource path="res://assets/reference/quit.png" type="Texture" id=9]
[ext_resource path="res://assets/reference/quit_pressed.png" type="Texture" id=10]

[sub_resource type="Animation" id=1]
resource_name = "floater"
length = 20.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2.5, 17.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -300.778, 422.5 ), Vector2( 2129.22, 421.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2.5, 10.5, 17.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}

[node name="Main menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 1870.0
margin_bottom = 1030.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 1870.0
margin_bottom = 1030.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_left = 511.0
margin_right = 1309.0
margin_bottom = 142.0
size_flags_horizontal = 6
texture = ExtResource( 1 )
stretch_mode = 5

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 146.0
margin_right = 1820.0
margin_bottom = 846.0
rect_min_size = Vector2( 0, 700 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 357.0
margin_top = 850.0
margin_right = 1463.0
margin_bottom = 938.0
size_flags_horizontal = 6
custom_constants/separation = 200

[node name="btnRestart" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 453.0
margin_bottom = 88.0
focus_next = NodePath("../btnContinue")
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_focused = ExtResource( 5 )

[node name="btnContinue" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 653.0
margin_right = 1106.0
margin_bottom = 88.0
focus_next = NodePath("../btnQuit")
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_focused = ExtResource( 4 )

[node name="btnQuit" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 653.0
margin_right = 1106.0
margin_bottom = 88.0
focus_next = NodePath("../btnRestart")
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_focused = ExtResource( 10 )

[node name="floater" type="Sprite" parent="MarginContainer/VBoxContainer"]
position = Vector2( -300.778, 522.5 )
scale = Vector2( 0.573148, 0.573148 )
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/VBoxContainer/floater"]
autoplay = "floater"
anims/floater = SubResource( 1 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/btnRestart" to="." method="_on_btnRestart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/btnContinue" to="." method="_on_btnContinue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/btnQuit" to="." method="_on_btnQuit_pressed"]
